# mease

./: .gitignore  .lldbinit  CMakeLists.txt  mease.desktop.in  mease.rc.in
.github/workflows/: build-windows.yaml  build-windows.yml  prepare-prefix-windows.yml
cmake/: utils.cmake
lang/: MEASaveEditor_en_US.ts  mease.pot  progress.md
lang/po/vi/: mease.po
mimetype/: mease.xml
scripts/: build.sh  deploy.sh  make-prefix.sh
scripts/deploy/: build-kde.sh  build.sh  common.sh  deploy.sh  download-qt.sh
scripts/deploy/patches/: breeze-icons.compression.patch  breeze.cmake.patch
scripts/patches/: breeze-cmake.patch
scripts/translate/: messages.sh
src/: CMakeLists.txt  main.cpp
src/mease/: CMakeLists.txt  config.kcfg  config.kcfgc  main.cpp
src/mease/core/: objectutils.hpp
src/mease/data/: gamesave.cpp  gamesave.hpp  gamesaveheader.cpp  gamesaveheader.hpp  savefile.cpp  savefile.hpp  savefileheader.cpp  savefileheader.hpp
src/mease/misc/hashing/: djb2.hpp
src/mease/misc/licenses/: gpl-3.0-standalone.cpp  gpl-3.0-standalone.hpp
src/mease/misc/number/: datetime.cpp  datetime.hpp  endian.hpp
src/mease/models/: abstracttreeitem.cpp  abstracttreeitem.hpp  abstracttreemodel.cpp  abstracttreemodel.hpp  gamesaverawdataitem.cpp  gamesaverawdataitem.hpp  gamesaverawdatamodel.cpp  gamesaverawdatamodel.hpp  treeitem.cpp  treeitem.hpp
src/mease/serialize/: datastream.cpp  datastream.hpp  datastream_p.hpp  savefile.cpp  savefileheader.cpp  serializer.cpp  serializer.hpp  serializer_p.hpp
src/mease/services/: message.cpp  message.hpp
src/mease/ui/: aboutdialog.cpp  editor.cpp  editor.hpp  mainwindow.cpp  mainwindow.hpp  measeui.rc  units.cpp  units.hpp
src/mease/ui/components/: actionbutton.cpp  actionbutton.hpp  basetab.cpp  basetab.hpp  utils.cpp  utils.hpp
src/mease/ui/dialogs/: aboutdialog.cpp  aboutdialog.hpp
src/mease/ui/editor/: rawdatatab.cpp  rawdatatab.hpp
src/mease/ui/editor/components/: abstracteditortab.cpp  abstracteditortab.hpp  formeditortab.cpp  formeditortab.hpp  gamesaverawdataview.cpp  gamesaverawdataview.hpp
src/mease/ui/pages/: editorpage.cpp  editorpage.hpp  landingpage.cpp  landingpage.hpp  loadingpage.cpp  loadingpage.hpp
src/mease/utils/: datetime.cpp  datetime.hpp  macros.hpp  number.hpp
src/mease/utils/hashing/: djb2.hpp
src/mease/utils/services/: messageservice.cpp  messageservice.hpp
